[package]
name = "volley"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.10"
glam = "0.25"
pollster = "0.3"
rayon = "1.10.0"
wgpu = "0.20"
winit = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
zmq = "0.10.0"
bincode = { version = "2.0", features = ["serde"] }
rmp-serde = "1.3"
rand = "0.9.2"
